--- a/sass/typo.scss
+++ b/sass/typo.scss
@@ -9,3 +9,15 @@ body {
   margin-bottom:20px;
   font-weight: bold;
 }
+
+b {
+  font-weight: bold;
+}
+
+.center {
+  text-align: center;
+}
+
+.padding-top {
+  padding-top:20px;
+}
