--- a/sass/modules/full-page-layout.scss
+++ b/sass/modules/full-page-layout.scss
@@ -14,6 +14,9 @@
       margin-top:8px;
     }
   }
+  .button-back.relative {
+    position:relative;
+  }
   .button-back:hover {
     background: rgba(255,255,255,0.2);
   }
@@ -69,6 +72,13 @@
       font-size:18px;
       font-weight: bold;
       text-decoration: underline;
+    }
+  }
+  .sauna.one-item {
+    justify-content: center;
+    .header {
+      width:100%;
+      text-align: center;
     }
   }
 
@@ -185,6 +195,28 @@
       text-align: center;
       font-size:14px;
       min-width: 52px;
+      padding-left:7px;
+      padding-right:7px;
+    }
+    tr.item {
+      td {
+        font-weight: bold;
+      }
+    }
+    td.break {
+      padding:15px 0;
+    }
+    td.break:after{
+      content:" ";
+      display:block;
+      height:1px;
+      background:#E5E5E5;
+      width:100%;
+    }
+    tr.item-order {
+      td {
+        padding-bottom: 10px;
+      }
     }
     tr {
       th:nth-child(1) {
@@ -205,5 +237,135 @@
     padding-top:10px;
     font-size:10px;
     color:$gray-2;
+  }
+
+  .text {
+    font-size:14px;
+    line-height: 20px;
+  }
+
+  .catalog {
+    padding-top:10px;
+    display: flex;
+    justify-content: space-between;
+    .btn {
+      width:40%;
+      font-size:14px;
+      color:#878787;
+      border:1px solid #393939;
+      text-align: center;
+      padding:10px;
+      border-radius: 5px;
+    }
+    .btn.active {
+      font-weight: bold;
+      color:#3174F6;
+      border:2px solid #3174F6;
+    }
+  }
+
+  .variable-width {
+    margin-left:-18px;
+    margin-right:-18px;
+    .slick-arrow {
+      display:none;
+    }
+    .good {
+      padding:14px 7px;
+      .good-wrap {
+        background: #FFFFFF;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+        padding:15px;
+        .good-image {
+          height:180px;
+          width:auto;
+          margin:0 auto;
+        }
+        .order {
+          .control {
+            width:45%;
+            .buttons {
+
+            }
+            a {
+              width:45%;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .menu-block {
+    padding-top:20px;
+    .header {
+      font-size:20px;
+      font-weight: bold;
+      text-align: center;
+      padding-bottom:15px;
+      border-bottom:1px solid #C4C4C4;
+    }
+    .row {
+      padding-top:10px;
+      display:flex;
+      justify-content: space-between;
+
+      .weight {
+        width:15%;
+      }
+      .name {
+        padding-left:10px;
+        width:60%;
+      }
+      .price {
+        text-align: right;
+        padding-left:10px;
+        width:25%;
+      }
+    }
+  }
+
+  .step {
+    padding-bottom:20px;
+    line-height: 20px;
+    font-size: 14px;
+  }
+
+  address {
+    text-align: center;
+    font-size:16px;
+    font-weight: bold;
+    line-height:22px;
+  }
+
+  .phone {
+    padding-top:25px;
+    display: block;
+    font-size:20px;
+    text-align: center;
+  }
+
+  .work-time {
+    padding-top:5px;
+    text-align: center;
+  }
+
+  .footer-menu {
+    padding-top:30px;
+    padding-bottom:30px;
+    display:flex;
+    justify-content: space-between;
+    .col {
+      width:50%;
+      a {
+        display:block;
+        font-size:14px;
+        padding-bottom:5px;
+        text-decoration: none;
+        color:#000;
+        font-weight: bold;
+      }
+    }
   }
 }
