--- a/sass/stack.scss
+++ b/sass/stack.scss
@@ -3,6 +3,7 @@
 @import "typo.scss";
 @import "colors.scss";
 @import "buttons.scss";
+@import "checkbox.scss";
 @import "modules/header.scss";
 @import "modules/footer.scss";
 @import "modules/banner.scss";
