--- a/sass/modules/full-page-layout.scss
+++ b/sass/modules/full-page-layout.scss
@@ -1,5 +1,6 @@
 .full-page {
   position:relative;
+  padding-bottom: 20px;
   .button-back {
     position:absolute;
     width:33px;
@@ -271,8 +272,11 @@
       display:none;
     }
     .good {
-      padding:14px 7px;
+      padding:14px 9px;
+      max-width:240px;
       .good-wrap {
+        width:200px;
+        margin:0 auto;
         background: #FFFFFF;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
         border-radius: 5px;
