--- a/sass/stack.scss
+++ b/sass/stack.scss
@@ -11,3 +11,6 @@
 @import "modules/order-list.scss";
 
 @import "modules/full-page-layout.scss";
+
+@import "modules/modal";
+@import "modules/date-picker";
