--- a/sass/modules/modal.scss
+++ b/sass/modules/modal.scss
@@ -5,10 +5,13 @@
   left:0px;
   right:0px;
   bottom:0px;
-  display:flex;
+  display:none;
   justify-content: center;
   align-items: center;
   .content {
     width:90%;
   }
+}
+.modal.active {
+  display:flex;
 }
