--- a/sass/modules/date-picker.scss
+++ b/sass/modules/date-picker.scss
@@ -3,6 +3,15 @@
   background: #FFFFFF;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
+  z-index: 100500;
+  position: relative;
+  padding:20px;
+  .close {
+    position:absolute;
+    cursor:pointer;
+    right:10px;
+    top:10px;
+  }
   .date {
     padding:10px;
     .control {
