--- a/sass/modules/full-page-layout.scss
+++ b/sass/modules/full-page-layout.scss
@@ -74,6 +74,14 @@
       font-weight: bold;
       text-decoration: underline;
     }
+    .guest {
+      text-decoration: none;
+      color:#C4C4C4;
+      font-size: 10px;
+      font-weight: normal;
+      text-align: center;
+      padding-top:5px;
+    }
   }
   .sauna.one-item {
     justify-content: center;
@@ -165,14 +173,14 @@
       padding-top:10px;
       display:flex;
       justify-content: space-between;
-      .col {
-        width:50%;
+      flex-wrap: wrap;
         > div {
+          font-size: 14px;
+          width:50%;
           padding-bottom:4px;
           font-size:14px;
           color:$gray-1;
         }
-      }
     }
   }
 
