--- a/sass/stack.scss
+++ b/sass/stack.scss
@@ -15,3 +15,5 @@
 @import "modules/modal";
 @import "modules/date-picker";
 @import "modules/select-list-sauna";
+@import "modules/lead-form";
+@import "modules/list-open-menu";
