--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -1,4 +1,5 @@
 .button {
+  color:#FFF;
   background: $green-btn;
   border-radius: 5px;
   height:33px;
@@ -7,4 +8,10 @@
   justify-content: center;
   align-items: center;
   padding: 0 8px;
+  cursor: pointer;
+}
+
+.button.h50 {
+  height:50px;
+  line-height:50px;
 }
