--- a/sass/modules/modal.scss
+++ b/sass/modules/modal.scss
@@ -11,6 +11,9 @@
   z-index: 100506;
   .content {
     width:90%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .modal.active {
