--- a/sass/typo.scss
+++ b/sass/typo.scss
@@ -21,3 +21,15 @@ b {
 .padding-top {
   padding-top:20px;
 }
+
+
+.input {
+  display: block;
+  border-radius: 5px;
+  border:1.5px solid #000;
+  height:40px;
+  margin-bottom:20px;
+  min-width:180px;
+  padding-left: 10px;
+  padding-right:10px;
+}
